--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@glidejs/glide": "^3.6.0",
-    "dayjs": "^1.11.7"
+    "dayjs": "^1.11.7",
+    "swiper": "^8.4.5"
   }
 }
